--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,14 @@
 <div class="center jumbotron">
-  <h1>Welcome to the Sample App</h1>
+  <h1>Welcome to the さとみ</h1>
 
   <h2>
     This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
+    <a href="http://abehiroshi.la.coocan.jp/">さとみ　Tutorial</a>
     sample application.
   </h2>
 
   <%= link_to "Sign up now!", '/signup', class: "btn btn-lg btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
+<%= link_to image_tag("satomi.jpg", alt: "Rails logo", width: "800px"),
                       "https://rubyonrails.org/" %>
